# social-and-web-analytics

./: CONTRIBUTING.md  README.md  requirements.txt
.docs/: rest-vs-streaming.key
01-introduction/: README.md  create-notebook.sh
01-introduction/_output/: example-nb.ipynb
01-introduction/dev-environment/: README.md
01-introduction/intro-python/: fake_tweets.json  python-review.ipynb
01-introduction/python-pkging/: README.md
01-introduction/python-pkging/swa_pkg/: nb_pkg.ipynb  setup.cfg
01-introduction/python-pkging/swa_pkg/examples/: nb_pkg.ipynb
01-introduction/python-pkging/swa_pkg/src/swa/: core.py
01-introduction/python-pkging/swa_pkg/src/swa/utils/: weather.py
01-introduction/python-review/: README.md  python-review.ipynb
02-social-data-collection/: README.md
02-social-data-collection/facebook/: README.md  fb_api.py  fb_scrapper.py
02-social-data-collection/google-trends/: trends_pytrends.py
02-social-data-collection/mongodb/: pymongo.py
02-social-data-collection/twitter/: README.md  twitter-api-v2-raw.ipynb  twitter-api-v2-tweepy.ipynb  twitter_pytwitter.py  twitter_raw.py  twitter_tweepy.py
03-brand-activity/: README.md  brand-activity.ipynb
03-brand-activity/social-miner/: setup.cfg
03-brand-activity/social-miner/src/social_miner/: commons.py  facebook.py  pipeline.py  pytrends_mining.py  twitter.py
03-brand-activity/social-miner/src/social_miner/analysis/: text.py
03-brand-activity/social-miner/src/social_miner/processing/: pipeline.py
03-brand-activity/social-miner/src/social_miner/sentiment/: google_nlp.py
04-sentiment-analysis/: README.md
04-sentiment-analysis/apify-your-models/model-api/: setup.cfg
04-sentiment-analysis/apify-your-models/model-api/models/logreg/: model.pkl  x_test.csv
04-sentiment-analysis/apify-your-models/model-api/src/mlapi/: main.py
04-sentiment-analysis/apify-your-models/model-api/src/mlapi/utils/: models.py  salute.py
04-sentiment-analysis/sentiment-miner/: setup.cfg
04-sentiment-analysis/sentiment-miner/src/sentiment_miner/: turney.py
05-users-journey-kpis/: README.md  markov-chain-study.ipynb
auth/: cookies.json  facebook_credentials[template].json  twitter_credentials[template].json  youtube_credentials[template].json
docs/: pipeline.key
inclass-material/: 02-api-exploring.ipynb  03-twitter.ipynb  04-mining-brand.ipynb  05-forecasting-engagement.ipynb  06-turney-sentiment.ipynb  07-markov-chain.ipynb
(+8 files in other folders)
