[metadata]
name = social-miner
description = Social and Web Analytics
version = 1.0.0
author = Miguel Duran

[options]
package_dir=
    =src
packages = find:
zip_safe = False
python_requires = >3.7
install_requires =
    tweepy
    matplotlib
    facebook-scraper
    pandas
    numpy
    authlib
    requests
    pytrends
    plotly
    kaleido
    google-api-python-client
    nltk
    networkx
    matplotlib
    scipy
    python-louvain
    community
    googletrans==3.1.0a0
    google-cloud-language
    fuzzywuzzy
    python-Levenshtein
    requests
    pandas
    numpy
    wordcloud

include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mine-tweets = social_miner.twitter:main
    mine-facebook = social_miner.facebook:main