[metadata]
name = sentiment-miner
description = Social and Web Analytics
version = 1.0.0
author = Miguel Duran

[options]
package_dir=
    =src
packages = find:
zip_safe = False
python_requires = >3.7
install_requires =
    pandas
    numpy
    nltk
    scipy
    pandas
    numpy
    notebook

include_package_data = True

[options.packages.find]
where = src

;[options.entry_points]
;console_scripts =
;    my-command = opinion_miner.submodule.path:function