[metadata]
name = swa
description = Social and Web Analytics
version = 1.0.0
author = Miguel Duran

[options]
package_dir=
    =src
packages = find:
zip_safe = False
python_requires = >3.7
install_requires =
    requests
    pandas
    numpy

include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    hello-world = swa.core:salute
    my-weather = swa.core:my_weather