[metadata]
name = mlapi
description = Social and Web Analytics: ML APIs
version = 1.0.0
author = Miguel Duran

[options]
package_dir=
    =src
packages = find:
zip_safe = False
python_requires = >3.7
install_requires =
    fastapi
    gunicorn
    requests
    pandas
    uvicorn[standard]

include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    salute = mlapi.main:hello_world
    serve-local = mlapi.main:main